[gd_scene load_steps=2 format=2]

[ext_resource path="res://MessageBoxes/RoomMessage.gd" type="Script" id=1]

[node name="MessagePanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Padding"]
margin_right = 984.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Padding/VBoxContainer"]
margin_right = 984.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="SenderName" type="RichTextLabel" parent="Padding/VBoxContainer/HBoxContainer"]
margin_right = 490.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = false
selection_enabled = true

[node name="TimeStamp" type="RichTextLabel" parent="Padding/VBoxContainer/HBoxContainer"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 20.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[right][/right]"
selection_enabled = true

[node name="MessageBody" type="RichTextLabel" parent="Padding/VBoxContainer"]
margin_top = 24.0
margin_right = 984.0
margin_bottom = 72.0
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
bbcode_enabled = true
scroll_active = false
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="Padding/VBoxContainer"]
margin_top = 76.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 5
[connection signal="gui_input" from="." to="." method="_on_MessagePanel_gui_input"]
[connection signal="meta_clicked" from="Padding/VBoxContainer/MessageBody" to="." method="_on_MessageBody_meta_clicked"]
